--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 fastapi==0.115.0
-uvicorn==0.30.6
+uvicorn[standard]==0.30.6
 jinja2==3.1.4
-python-telegram-bot==21.6
+python-multipart==0.0.9
+reportlab==4.2.2
