--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
+# --- DB ---
+# Option A (recommended for Railway): PostgreSQL
+# Railway will provide DATABASE_URL via a DB Reference Variable.
+# DATABASE_URL=postgresql://user:pass@host:5432/dbname
+
+# Option B (simple fallback): SQLite file
 DB_PATH=/data/water.db
+
 # BOT_TOKEN=123456:ABCDEF... (optional)
