--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ fastapi==0.115.0
 uvicorn[standard]==0.30.6
 jinja2==3.1.4
 python-multipart==0.0.9
+
+# PostgreSQL (Railway)
+psycopg[binary,pool]>=3.2,<4
